vault/bastion/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bastion
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bastion
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bastion
    spec:
      containers:
        - name: nginx
          image: asia-northeast3-docker.pkg.dev/prj-d-devops-402107/devops-infra/nginx:v1.25.2-amd64
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
          lifecycle:
            preStop:
              exec:
                command:
                  - "/bin/sh"
                  - '-c'
                  - "sleep 5 && /usr/sbin/nginx -s quit"
          volumeMounts:
            - mountPath: /etc/nginx # mount nginx-conf volumn to /etc/nginx
              readOnly: true
              name: nginx-conf
      terminationGracePeriodSeconds: 120
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf # place ConfigMap `nginx-conf` on /etc/nginx
            items:
              - key: nginx.conf
                path: nginx.conf
              - key: mime.types
                path: mime.types
        - name: log
          emptyDir: { }
