vault/bastion/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bastion
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: bastion
  ports:
    - port: 80
      targetPort: 80
